[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
authors= ["gamez0 dobinshin@gmail.com"]
description = "A sample from gamez0"
license = "MIT/Apache-2.0"
repository ="https://github.com/Gamez0/hello-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"
